--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -9,11 +9,16 @@ jobs:
   clang-format:
     name: Formatting Check
     runs-on: ubuntu-latest
+    strategy:
+          matrix:
+            path:
+              - 'src_one'
+              - 'src_two'
 
     steps:
     - uses: actions/checkout@v2
-    - name: clang-format
+    - name: clang-format ${{ matrix.path }}
       uses: jidicula/clang-format-action@v4.6.2
       with:
         clang-format-version: '12'
-        check-path: "src**/*"
+        check-path: ${{ matrix.path }}
