--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - name: cache paths
       run: |
-        echo C:\Windows\System32\WHERE vcpkg.exe
+        C:\Windows\System32\WHERE vcpkg.exe
         echo VCPKG_ROOT: %VCPKG_ROOT%
         echo VCPKG_DEFAULT_BINARY_CACHE: %VCPKG_DEFAULT_BINARY_CACHE%
         echo LOCALAPPDATA: %LOCALAPPDATA%\vcpkg\archives
