--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -19,7 +19,7 @@ jobs:
         .\bootstrap-vcpkg.bat
         echo VCPKG_ROOT: $VCPKG_ROOT
 
-  vcpkg-lunux:
+  vcpkg-linux:
     name: vcpkg-lunux
     runs-on: ubuntu-20.04
     steps:
@@ -29,7 +29,7 @@ jobs:
         git clone https://github.com/Microsoft/vcpkg.git
         cd vcpkg
         git checkout --force 5962cf5a3bfc2124e8de991a4e45a8edcb3b4c69
-        .\bootstrap-vcpkg.bat
+        .\bootstrap-vcpkg.sh
         echo VCPKG_ROOT: $VCPKG_ROOT
 
   vcpkg-macos:
@@ -42,5 +42,5 @@ jobs:
         git clone https://github.com/Microsoft/vcpkg.git
         cd vcpkg
         git checkout --force 5962cf5a3bfc2124e8de991a4e45a8edcb3b4c69
-        .\bootstrap-vcpkg.bat
+        .\bootstrap-vcpkg.sh
         echo VCPKG_ROOT: $VCPKG_ROOT
