--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -20,7 +20,7 @@ jobs:
         echo VCPKG_ROOT: $VCPKG_ROOT
 
   vcpkg-linux:
-    name: vcpkg-lunux
+    name: vcpkg-linux
     runs-on: ubuntu-20.04
     steps:
     - name: Installing vcpkg (windows)
@@ -29,7 +29,9 @@ jobs:
         git clone https://github.com/Microsoft/vcpkg.git
         cd vcpkg
         git checkout --force 5962cf5a3bfc2124e8de991a4e45a8edcb3b4c69
-        .\bootstrap-vcpkg.sh
+        ./bootstrap-vcpkg.sh
+        cd ..
+        cd zen
         echo VCPKG_ROOT: $VCPKG_ROOT
 
   vcpkg-macos:
@@ -42,5 +44,7 @@ jobs:
         git clone https://github.com/Microsoft/vcpkg.git
         cd vcpkg
         git checkout --force 5962cf5a3bfc2124e8de991a4e45a8edcb3b4c69
-        .\bootstrap-vcpkg.sh
+        ./bootstrap-vcpkg.sh
+        cd ..
+        cd zen
         echo VCPKG_ROOT: $VCPKG_ROOT
