--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -15,24 +15,23 @@ jobs:
         cd ..
         git clone https://github.com/Microsoft/vcpkg.git
         cd vcpkg
-        git checkout --force 5962cf5a3bfc2124e8de991a4e45a8edcb3b4c69
+        git checkout --force 2022.03.10
         .\bootstrap-vcpkg.bat
-        echo VCPKG_ROOT: $VCPKG_ROOT
+        ls ..\vcpkg
 
   vcpkg-linux:
     name: vcpkg-linux
     runs-on: ubuntu-20.04
     steps:
     - name: Installing vcpkg (windows)
+      shell: bash
       run: |
         cd ..
         git clone https://github.com/Microsoft/vcpkg.git
         cd vcpkg
-        git checkout --force 5962cf5a3bfc2124e8de991a4e45a8edcb3b4c69
+        git checkout --force 2022.03.10
         ./bootstrap-vcpkg.sh
-        cd ..
-        cd zen
-        echo VCPKG_ROOT: $VCPKG_ROOT
+        ls ../vcpkg
 
   vcpkg-macos:
     name: vcpkg-macos
@@ -43,8 +42,7 @@ jobs:
         cd ..
         git clone https://github.com/Microsoft/vcpkg.git
         cd vcpkg
-        git checkout --force 5962cf5a3bfc2124e8de991a4e45a8edcb3b4c69
+        git checkout --force 2022.03.10
         ./bootstrap-vcpkg.sh
-        cd ..
-        cd zen
         echo VCPKG_ROOT: $VCPKG_ROOT
+        ls ../vcpkg
