--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -21,8 +21,8 @@ jobs:
 
   vcpkg-linux:
     name: vcpkg-linux
-    runs-on: ubuntu-20.04
-#    runs-on: self-hosted
+#    runs-on: ubuntu-20.04
+    runs-on: self-hosted
     steps:
     - name: Installing vcpkg (windows)
       shell: bash
