--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,13 +6,34 @@ on:
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
+env:
+  NODE_VERSION: "12.x"
+  APP_VERSION: "1.0.O"
+
 jobs:
-  show-tag:
+  get-tag:
+    runs-on: ubuntu-latest
+    outputs:
+      tag-name: ${{steps.compute-tag.outputs.tag}}
+
+    steps:
+      - name: compute tag
+        id: compute-tag
+        run: |
+          $GITHUB_FULLREF="${{ github.ref }}"
+          $RELEASE_VERSION=$GITHUB_FULLREF -replace 'refs/.*/', ''
+          echo Version $RELEASE_VERSION
+          echo "::set-output name=tag::$RELEASE_VERSION"
+
+  use-tag:
     strategy:
       matrix:
-        platform: [ubuntu-latest, windows-latest, macos-latest]
+#        platform: [ubuntu-latest, windows-latest, macos-latest]
+        platform: [ubuntu-latest]
+
     runs-on: ${{matrix.platform}}
+    needs: get-tag
     steps:
     - name: Show tag
       run: |
-        echo ${{github.event.release.tag_name}}
+        echo ${{needs.get-tag.outputs.tag}}
