--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,11 +9,15 @@ on:
 jobs:
   get-tag:
     runs-on: ubuntu-latest
+    outputs:
+      tag-name: ${{steps.get-tag.outputs.tag}}
     steps:
       - name: Set RELEASE_VERSION env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-#    outputs:
-#      tag-name: ${{steps.compute-tag.outputs.tag}}
+        id: get-tag
+        run: |
+          echo "${GITHUB_REF#refs/*/}"
+          echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+          echo "::set-output name=tag::${GITHUB_REF#refs/*/}"
 #
 #    steps:
 #      - name: compute tag
@@ -35,5 +39,5 @@ jobs:
     steps:
     - name: Show tag
       run: |
-         echo ${{env.RELEASE_VERSION}}
-#        echo ${{needs.get-tag.outputs.tag}}
+        echo ${{needs.get-tag.outputs.tag}}
+#         echo ${{env.RELEASE_VERSION}}
