--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,5 +39,5 @@ jobs:
     steps:
     - name: Show tag
       run: |
-        echo ${{needs.get-tag.outputs.tag}}
+        echo ${{needs.get-tag.outputs.tag-name}}
 #         echo ${{env.RELEASE_VERSION}}
