--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,10 +7,11 @@ on:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
-  get-tag:
+  get-version-tag:
     runs-on: ubuntu-latest
     outputs:
-      tag-name: ${{steps.get-tag.outputs.tag}}
+      version: ${{steps.get-tag.outputs.tag}}
+      pre-release: ${{steps.get-tag.outputs.pre-release}}
     steps:
       - name: Set RELEASE_VERSION env
         id: get-tag
@@ -18,6 +19,13 @@ jobs:
           echo "${GITHUB_REF#refs/*/}"
           echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
           echo "::set-output name=tag::${GITHUB_REF#refs/*/}"
+
+      - name: set-prerelease
+        uses: haya14busa/action-cond@v1
+        with:
+          cond: contains("${GITHUB_REF}", '-pre')
+          if_true: echo "::set-output name=pre-release::true"
+          if_false: echo "::set-output name=pre-release::false"
 #
 #    steps:
 #      - name: compute tag
@@ -35,9 +43,10 @@ jobs:
         platform: [ubuntu-latest]
 
     runs-on: ${{matrix.platform}}
-    needs: get-tag
+    needs: get-version-tag
     steps:
     - name: Show tag
       run: |
-        echo ${{needs.get-tag.outputs.tag-name}}
+        echo "version: ${{needs.get-version-tag.outputs.version}}"
+        echo "prerelease: ${{needs.get-version-tag.outputs.pre-release}}""
 #         echo ${{env.RELEASE_VERSION}}
