--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,21 +11,23 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       version: ${{steps.get-tag.outputs.tag}}
-      pre-release: ${{steps.get-tag.outputs.pre-release}}
+      prerelease: ${{steps.get-prerelease.outputs.prerelease}}
     steps:
-      - name: Set RELEASE_VERSION env
+      - name: Set version output
         id: get-tag
         run: |
           echo "${GITHUB_REF#refs/*/}"
           echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
           echo "::set-output name=tag::${GITHUB_REF#refs/*/}"
 
-      - name: set-prerelease
+      - name: Set prerelease output
+        id: get-prerelease
         uses: haya14busa/action-cond@v1
         with:
           cond: contains("${GITHUB_REF}", '-pre')
-          if_true: echo "::set-output name=pre-release::true"
-          if_false: echo "::set-output name=pre-release::false"
+          if_true: echo "::set-output name=prerelease::true"
+          if_false: echo "::set-output name=prerelease::false"
+
 #
 #    steps:
 #      - name: compute tag
@@ -48,5 +50,5 @@ jobs:
     - name: Show tag
       run: |
         echo "version: ${{needs.get-version-tag.outputs.version}}"
-        echo "prerelease: ${{needs.get-version-tag.outputs.pre-release}}"
+        echo "prerelease: ${{needs.get-version-tag.outputs.prerelease}}"
 #         echo ${{env.RELEASE_VERSION}}
