--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
         id: get-prerelease
         uses: haya14busa/action-cond@v1
         with:
-          cond: contains("${GITHUB_REF}", '-pre')
+          cond: ${{ contains("${GITHUB_REF}", '-pre') }}
           if_true: "true"
           if_false: "false"
 
