--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,8 @@ jobs:
       - name: Set version output
         id: get-tag
         run: |
+          echo "GITHUB_REF: ${GITHUB_REF}"
+          echo "GITHUB_REF_NAME: ${GITHUB_REF_NAME}"
           echo "${GITHUB_REF#refs/*/}"
           echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
           echo "::set-output name=tag::${GITHUB_REF#refs/*/}"
@@ -24,7 +26,7 @@ jobs:
         id: get-prerelease
         uses: haya14busa/action-cond@v1
         with:
-          cond: ${{ contains(GITHUB_REF, '-pre') }}
+          cond: contains(${{env.GITHUB_REF}}, '-pre')
           if_true: "true"
           if_false: "false"
 
