--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Set prerelease output
         id: get-prerelease
-        run: echo "::set-output name=prerelease::${env.PRERELEASE}"
+        run: echo "::set-output name=prerelease::${{env.PRERELEASE}}"
 
 #
 #    steps:
