back to action-cond

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,8 @@ jobs:
         uses: haya14busa/action-cond@v1
         with:
           cond: contains(github.ref, '-pre')
-
+          if_true: "true"
+          if_false: "false"
 
 #
 #    steps:
