--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,47 +7,28 @@ on:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
-  get-version-tag:
-    runs-on: ubuntu-latest
-    outputs:
-      version: ${{steps.get-tag.outputs.tag}}
-      prerelease: ${{steps.get-prerelease.outputs.value}}
-    steps:
-      - name: Set version output
-        id: get-tag
-        run: |
-          echo "GITHUB_REF: ${GITHUB_REF}"
-          echo "GITHUB_REF_NAME: ${GITHUB_REF_NAME}"
-          echo "${GITHUB_REF#refs/*/}"
-          echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-          echo "::set-output name=tag::${GITHUB_REF#refs/*/}"
-          echo "PRERELEASE=false" >> $GITHUB_ENV
+#  get-version-tag:
+#    runs-on: ubuntu-latest
+#    outputs:
+#      version: ${{steps.get-tag.outputs.tag}}
+#      prerelease: ${{steps.get-prerelease.outputs.value}}
+#    steps:
+#      - name: Set version output
+#        id: get-tag
+#        run: |
+#          echo "GITHUB_REF: ${GITHUB_REF}"
+#          echo "GITHUB_REF_NAME: ${GITHUB_REF_NAME}"
+#          echo "${GITHUB_REF#refs/*/}"
+#          echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+#          echo "::set-output name=tag::${GITHUB_REF#refs/*/}"
 
-#      - name: Set prerelease env
-#        if: contains(github.ref, '-pre')
-#        run: echo "PRERELEASE=true" >> $GITHUB_ENV
-#
 #      - name: Set prerelease output
 #        id: get-prerelease
-#        run: echo "::set-output name=prerelease::${{env.PRERELEASE}}"
-
-      - name: Set prerelease output
-        id: get-prerelease
-        uses: haya14busa/action-cond@v1
-        with:
-          cond: ${{contains(github.ref, '-pre')}}
-          if_true: "true"
-          if_false: "false"
-
-#
-#    steps:
-#      - name: compute tag
-#        id: compute-tag
-#        run: |
-#          $GITHUB_FULLREF="${{ github.ref }}"
-#          $RELEASE_VERSION=$GITHUB_FULLREF -replace 'refs/.*/', ''
-#          echo Version $RELEASE_VERSION
-#          echo "::set-output name=tag::$RELEASE_VERSION"
+#        uses: haya14busa/action-cond@v1
+#        with:
+#          cond: ${{contains(github.ref, '-pre')}}
+#          if_true: "true"
+#          if_false: "false"
 
   use-tag:
     strategy:
@@ -56,10 +37,17 @@ jobs:
         platform: [ubuntu-latest]
 
     runs-on: ${{matrix.platform}}
-    needs: get-version-tag
+#    needs: get-version-tag
     steps:
+    - name: Check prerelease
+      id: get-prerelease
+      uses: haya14busa/action-cond@v1
+      with:
+        cond: ${{contains(github.ref, '-pre')}}
+        if_true: "true"
+        if_false: "false"
     - name: Show tag
       run: |
-        echo "version: ${{needs.get-version-tag.outputs.version}}"
-        echo "prerelease: ${{needs.get-version-tag.outputs.prerelease}}"
+        echo "version: ${GITHUB_REF_NAME}"
+        echo "prerelease: ${{steps.get-prerelease.outputs.value}}"
 #         echo ${{env.RELEASE_VERSION}}
